[package]
name = "quake-files"
version = "0.1.0"
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
description = "A library for reading, writing and converting Quake 1 files"
homepage = "https://github.com/GyrosOfWar/quake-files"
repository = "https://github.com/GyrosOfWar/quake-files"
license = "MIT"

[dependencies]
image = "0.7"
byteorder = "0.5"
walkdir = "0.1"
log = "0.3"

[dependencies.clippy]
optional = true
version = "0.*"

[features]
nightly = ["clippy"]